# finger-count

./: LICENSE  README.md
finger-count/: main.py  pyproject.toml
